--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
-/Exercise3/my_pacman.egg-info/
-/Exercise3/my_pacman_v0.egg-info/
+*/Exercise3/my_pacman.egg-info/
+*/Exercise3/my_pacman_v0.egg-info/
+*.pyc
+*__pycache__
